deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
  name: sof-sandbox
spec:
  rules:
    - host: sof.dev.sandbox.villagecare.aidbox.io
      http:
        paths:
          - path: /
            backend:
              serviceName: sof-sandbox
              servicePort: 80
    - host: dev.sof.villagecare.aidbox.io
      http:
        paths:
          - path: /
            backend:
              serviceName: sof-dev
              servicePort: 80
  tls:
    - hosts:
        - sof.dev.sandbox.villagecare.aidbox.io
        - dev.sof.villagecare.aidbox.io
      secretName: sof-dev-tls
